# multitenant-saas-starter

./: .dockerignore  .env.example  .env.local.example  .envrc  .eslintrc.js  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  turbo.json
.cursor/: Dockerfile
.cursor/rules/: fastapi.mdc  python-sqlmodel.mdc
.github/: dependabot.yml
.github/workflows/: README.md  deploy-api.yml
apps/api/: .dockerignore  Dockerfile  README.md  dev.py  fly.toml  fly.toml.backup  main.py  package.json  pyproject.toml  requirements.txt  start.py  turbo.json
apps/api/config/: settings.py
apps/api/endpoints/: __init__.py
apps/api/endpoints/memberships/: dependencies.py
apps/api/endpoints/organizations/: dependencies.py
apps/api/endpoints/users/: dependencies.py  router.py
apps/api/middleware/: csrf.py  rate_limit.py
apps/api/routes/: __init__.py
apps/api/routes/auth/: dependencies.py  models.py  router.py
apps/api/routes/memberships/: __init__.py  dependencies.py  router.py
apps/api/routes/organizations/: __init__.py  dependencies.py  router.py
apps/api/routes/users/: __init__.py  dependencies.py  router.py
apps/api/src/: main.py
apps/api/src/api/: main.py
apps/api/src/api/config/: settings.py
apps/api/src/api/dependencies/: __init__.py  depends_user.py
apps/api/src/api/endpoints/auth/: __init__.py  dependencies.py  router.py
apps/api/src/api/endpoints/memberships/: __init__.py  dependencies.py  router.py
apps/api/src/api/endpoints/organizations/: __init__.py  dependencies.py  router.py
apps/api/src/api/endpoints/users/: __init__.py  dependencies.py  router.py
apps/api/src/api/middleware/: csrf.py
apps/api/src/api/routers/: __init__.py
apps/api/src/api/routers/v1/: __init__.py  auth.py  memberships.py  organizations.py  users.py
apps/api/src/api/routes/: __init__.py
apps/api/src/api/routes/auth/: __init__.py  dependencies.py  router.py
apps/api/src/api/routes/memberships/: router.py
apps/api/src/api/routes/organizations/: dependencies.py  router.py
apps/api/src/api/routes/users/: dependencies.py  router.py
apps/api/src/api/utils/: __init__.py  db.py
apps/api/utils/: __init__.py  api_utils.py
apps/web/: .env.example  .env.local.example  components.json  middleware.ts  next.config.mjs  package.json  tsconfig.json  turbo.json
apps/web/app/: error.tsx  layout.tsx  middleware.ts  page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/cookies/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/imprint/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/app/robots.txt/: route.ts
apps/web/app/terms/: page.tsx
apps/web/components/: axiom-demo.tsx
apps/web/config/: environments.ts  index.ts
apps/web/hooks/: useCSRF.ts
apps/web/lib/: auth.client.ts  auth.server.ts  constants.ts
auth-providers/auth-supabase/: .env.example  README.md  config.py  package.json  pyproject.toml  turbo.json
auth-providers/auth-supabase/src/auth_supabase/: config.py  dependencies.py  provider.py
configs/eslint/: README.md  package.json
configs/prettier/: .prettierignore  README.md  package.json  prettier.config.mjs
configs/typescript/: package.json  react-library.json
docs/: authentication.html  authentication.md  base.sql  database-erd.mermaid  fix.md  multitenant_saas_schema.mermaid  openapi.json
docs/middleware/: csrf.py
docs/routes/auth/: __init__.py  dependencies.py
docs/routes/organizations/: dependencies.py
docs/routes/users/: dependencies.py  router.py
docs/utils/: db.py
infra/supabase/: config.toml
infra/supabase/migrations/: 00000000_baseline_functions_triggers.sql  00000000_baseline_tables.sql  20240115_auth_improvements.sql  20250115_audit_field_triggers.sql  20250115_consolidate_auth_tables.sql
libs/core/: README.md  package.json  pyproject.toml  turbo.json
libs/core/src/backend_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/core/src/core/: __init__.py
libs/core/src/core/auth/: __init__.py  exceptions.py  factory.py  models.py  protocols.py  service.py
libs/core/src/core/common/: __init__.py  exceptions.py  mixins.py  protocols.py
libs/core/src/core/config/: __init__.py  settings.py
libs/core/src/core/database/: __init__.py  database.py  exceptions.py
libs/core/src/core/domains/: __init__.py
libs/core/src/core/domains/auth/: __init__.py  base table  models.py  protocols.py  schemas.py  service.py
libs/core/src/core/domains/memberships/: __init__.py  exceptions.py  models.py  repository.py  schemas.py  services.py
libs/core/src/core/domains/organizations/: __init__.py  exceptions.py  models.py  repository.py  schemas.py  services.py
libs/core/src/core/domains/users/: __init__.py  exceptions.py  models.py  repository.py  schemas.py  services.py
libs/core/src/core/utils/: __init__.py  logging.py
libs/eslint-config/: base.js  package.json
libs/logger/: README.md  package.json  tsconfig.json  turbo.json
libs/logger/src/: ambient.d.ts  index.ts  next.ts  node.ts  shared.ts
libs/shared/: .prettierignore  package.json  tsconfig.json
libs/shared/src/lib/: currency.ts  index.ts
libs/shared/src/schemas/: index.ts  memberships.ts  users.ts
libs/supabase-auth/: README.md  package.json  pyproject.toml
libs/supabase-auth-provider/: package.json  pyproject.toml
libs/supabase-auth-provider/src/supabase_auth_provider/: __init__.py  config.py  provider.py
libs/supabase-auth/src/supabase_auth/: __init__.py  config.py  provider.py
libs/typescript-config/: package.json
libs/typescript-sdk/: eslint.config.mjs  package.json
libs/typescript-sdk/src/lib/: currency.ts  index.ts
libs/ui/: package.json  tsconfig.json
libs/ui/src/: index.ts
libs/ui/src/components/: composer.tsx  index.ts  prompt-button.tsx  (+2 more)
scripts/: cli.py  db-admin.sh  release.sh
tools/cli/: README.md  app.py  cli.py  package.json  pyproject.toml
tools/cli/commands/: __init__.py  db.py  dev.py  release.py  workspace.py
(+29 files in other folders)
