[project]
name = "api"
version = "0.1.1"
description = "FastAPI backend server"
requires-python = ">=3.11"
dependencies = [
    "core",
    "supabase-auth",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "pytest-asyncio>=0.24.0"
]

[project.scripts]
install = "uv pip install -r requirements.txt"
dev = "uv run fastapi dev"
start = "uv run fastapi start"
lint = "uv run ruff check ."
lint-fix = "uv run ruff check --fix ."
clean = "rm -rf __pycache__ .pytest_cache .ruff_cache dist build *.egg-info .turbo"
format = "uv run ruff format ."

[tool.uv.sources]
core = { workspace = true }
supabase-auth = { workspace = true }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["F841"]
