[project]
name = "api"
version = "0.3.0"
description = "FastAPI backend server"
requires-python = ">=3.11"
dependencies = [
    "core",
    "supabase-auth-provider",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "axiom-py>=0.9.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "pytest-asyncio>=0.24.0"
]

[project.scripts]
dev = "pnpm run dev:kill && cd ../.. && uv run python apps/api/dev.py"
start = "pnpm run start:kill && cd ../.. && uv run python apps/api/start.py"
lint = "uv run ruff check ."
lint-fix = "uv run ruff check --fix ."
clean = "rm -rf __pycache__ .pytest_cache .ruff_cache dist build *.egg-info .turbo"
format = "uv run ruff format ."

[tool.uv.sources]
core = { workspace = true }
supabase-auth-provider = { workspace = true }

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["F841"]
