[project]
name = "api"
version = "0.3.1"
description = "FastAPI backend server"
requires-python = ">=3.11"
dependencies = [
    "core",
    "auth-supabase",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "axiom-py>=0.9.0",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "pytest-asyncio>=0.24.0"
]

[tool.uv.sources]
core = { workspace = true }
auth-supabase = { workspace = true }

[tool.uv]
src = "src"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = ["F841"]
