[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core"
version = "0.0.2"
description = "Core backend logic including domains, common utilities, and configuration"
authors = [
    {name = "Mac Anderson", email = "mac@macanderson.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.24",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.14.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.10.1",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
    "pytest-asyncio>=0.24.0"
]
# Hatch configuration - include all top-level packages
[tool.hatch.build.targets.wheel]
packages = [
    "src/core"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md"
]
