[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supabase-auth-provider"
version = "0.2.0"
description = "Supabase authentication provider for the core auth system"
authors = [
    {name = "Mac Anderson", email = "mac@macanderson.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core",
    "supabase>=2.18.1",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "axiom-py>=0.9.0",
]

[tool.uv.sources]
core = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.2",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/supabase_auth_provider"
]
