[project]
name = "cli"
version = "0.0.0"
description = "CLI tools for the project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.4",
    "jq>=1.10.0",
]

[project.scripts]
cli = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []

[tool.typer]
app = "app:main"
